yiltc-go-backup/testsuite/negative/use_after_move_str.yilt
// Use-after-move for strings
fn main()
    let s = "hello"
    let t = s
    print(s)
